Version 1.1.0 (In development)
-------------------------------
+ Added Master.getChannel()
+ Put more info to Master.getUser()
+ Added Master.parseHostmask()
+ Added Master.getUsername()
$ Renamed Master.activatePlugin() to Master.activatePlugin()
$ Renamed Master.deactivatePlugin() to Master.deactivatePlugin()
$ Renamed Master.reloadPlugin() to Master.reactivatePlugin()


Version 1.0.1 (04/03/2010)
--------------------------
@ Added $sChannel (opt) parameter to all IBC functions - note, /NOT/ IRC
	channels, it's different communication channels
+ Added Master.getIBCCount()
- Removed Master.getMasterConfig()
+ Added Master.getNetworkConfig()
+ Added Control::botGetNames()
$ Updated Evaluation, DynamicCommand plugins
+ Added Relay plugin
+ Added UPTIME in CTCP
+ Quietly added Master.dateSince(), to be documented further


Version 1.0.0 (05/02/2010)
--------------------------
> Yeah, this log started. Just take everything is read, eh?